# chinese-poetry-backend

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  config.toml.example  docker-compose.yml
docs/: ios-api-reference.md
docs/plans/: 2026-05-13-backend-design.md  2026-05-13-backend-plan.md  2026-05-15-pagination-and-reset-password-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/layouts/: AdminLayout.vue
frontend/src/router/: index.ts
frontend/src/styles/: components.css  global.css
frontend/src/utils/: confirm.ts  toast.ts
frontend/src/views/: Dashboard.vue  Export.vue  Import.vue  Login.vue  Poems.vue  Poets.vue  Users.vue
migrations/: 001_create_users.sql  002_create_poets.sql  003_create_poems.sql  004_create_learning_records.sql  005_create_review_history.sql  006_create_settings.sql  007_update_mastery_level_enum.sql  007b_update_review_history_enum.sql  008_create_refresh_tokens.sql
src/: app.rs  auth.rs  config.rs  errors.rs  main.rs  state.rs
src/handlers/admin/: auth.rs  dashboard.rs  export.rs  import.rs  mod.rs  poems.rs  poets.rs  users.rs
src/handlers/api/: auth.rs  mod.rs  poems.rs  progress.rs
src/models/: user.rs
